# DirectFuzzyInference

./: .clang-tidy  .gitignore  CMakeLists.txt  input.txt  main.cpp  output.txt
src/conclusion/: Conclusion.cpp  Conclusion.hpp
src/direct_fuzzy_inference/: DirectFuzzyInference.cpp  DirectFuzzyInference.hpp
src/fuzzy_set/: FuzzySet.cpp  FuzzySet.hpp
src/parser/: Parser.cpp  Parser.hpp  Tokenizer.cpp  Tokenizer.hpp
src/relation_matrix/: RelationMatrix.cpp  RelationMatrix.hpp
src/utils/: Utils.cpp  Utils.hpp
